welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:39: error: illegal start of simple expression
} 
^